# seqognize

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: nt_alignment.rs  synth.fasta
seqognize-benches/: Cargo.toml  synth.fasta  synth.json  synth.jsonl
seqognize-benches/benches/: nt_alignment.rs
seqognize-benches/src/: main.rs  tests.rs
seqognize-cli/: Cargo.toml
seqognize-cli/src/: main.rs
seqognize-parallel/: Cargo.toml
seqognize-parallel/src/: lib.rs
seqognize-web/: Cargo.toml
seqognize-web/src/: main.rs
src/: aligner.rs  alignment.rs  config.rs  element.rs  lib.rs  matrix.rs  nt_aligner.rs  simd_backend.rs
