[workspace]
members = [
    "seqognize-cli",
    "seqognize-web",
    "seqognize-benches",
]

[package]
name = "seqognize"
version = "0.1.0"
authors = ["Albert Gevorgyan <ablertus@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
delegate = "0.12.0"
ndarray = "0.10.2"
clap = { version = "=4.4.18", features = ["derive"] }

[dev-dependencies]
# No dev-dependencies needed in root for now
