[package]
name = "seqognize-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
seqognize = { path = "../" }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "nt_alignment"
harness = false

[[bin]]
name = "synth"
path = "src/main.rs"
